extends Node
@onready var uisfx: AudioStreamPlayer = $UISFX
@onready var jump_sfx: AudioStreamPlayer = $JumpSFX
@onready var loose_life_sfx: AudioStreamPlayer = $LooseLifeSFX
@onready var start_game_sfx: AudioStreamPlayer = $StartGameSFX
@onready var game_over_sfx: AudioStreamPlayer = $GameOverSFX
@onready var music: AudioStreamPlayer = $Music
@onready var collectible: AudioStreamPlayer = $Collectible
